--- a/src/App.css
+++ b/src/App.css
@@ -182,6 +182,12 @@
   
 }
 
+.center-a-div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .body-div{
   margin: 0 155px;
   /* height: 100vh; */
@@ -259,7 +265,7 @@ body {
 }
 
 .testimon-full-cont{
-  background: linear-gradient(180deg, #b6dafb00 0%, var(--secondary_navigation) 50%, #b6dafb 100%);
+  background: linear-gradient(180deg, #b6dafb00 0%, var(--secondary_navigation) 50%, #b6dafb00 100%);
 }
 
 .testi-animation-rightt{
@@ -268,6 +274,25 @@ body {
 
 .testi-animation-left{
   animation: 1s ease-in-out 0s 1 running testiAnimatLeft;
+}
+
+.container-width{
+  max-width: 80% !important;
+}
+
+
+.testimo-bottom-div .testimo-bottom-text{
+  font-size: 18px;
+  font-weight: 330;
+  width: 80%;
+  text-align: center;
+}
+
+.social-media-div{
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  align-items: center;
 }
 
 @keyframes testiAnimatRight{
