--- a/src/App.css
+++ b/src/App.css
@@ -191,6 +191,7 @@
 .body-div{
   margin: 0 155px;
   /* height: 100vh; */
+  position: relative;
 }
 
 .center-text-div{
@@ -218,16 +219,19 @@ body {
   margin: 0;
   padding: 0;
   /* background: linear-gradient(180deg, #b6dafb 0%, var(--secondary_navigation) 50%, #b6dafb 100%); */
-  background-image: url('./assests/images/bg_image_back.jpg');
+  /* background-image: url('./assests/images/bg_image_back.jpg'); */
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 .home-img{
-  border-radius: 40px;
+  border-radius: 20px;
   object-fit: cover;
   width: 280px;
+  border: 4px solid #0000001a;
+  /* box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px; */
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px inset, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px inset;
 }
 
 .home-left-letter{
@@ -265,7 +269,7 @@ body {
 }
 
 .testimon-full-cont{
-  background: linear-gradient(180deg, #b6dafb00 0%, var(--secondary_navigation) 50%, #b6dafb00 100%);
+  /* background: linear-gradient(180deg, #b6dafb00 0%, var(--secondary_navigation) 50%, #b6dafb00 100%); */
 }
 
 .testi-animation-rightt{
@@ -277,7 +281,11 @@ body {
 }
 
 .container-width{
-  max-width: 80% !important;
+  max-width: 95% !important;
+}
+
+.header-icon{
+  height: 55px !important; 
 }
 
 
@@ -294,6 +302,108 @@ body {
   gap: 30px;
   align-items: center;
 }
+
+.header-items{
+  color: #000 !important;
+}
+
+.contact-us-container{
+  height: 480px;
+  position: relative;
+  padding: 20px;
+  background-color: #fff; 
+  overflow: hidden;
+}
+
+
+.background-filter {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-image: url('./assests/images/maindemoslide11.jpg'); */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  filter: blur(5px);
+  opacity: 0.6;
+  z-index: 1;
+}
+
+.content-wrapper {
+  position: relative;
+  z-index: 2; /* In front of the background */
+}
+
+.custom-shape-divider-bottom-1721451173 {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  overflow: hidden;
+  line-height: 0;
+}
+
+.custom-shape-divider-bottom-1721451173 svg {
+  position: relative;
+  display: block;
+  width: calc(153% + 1.3px);
+  height: 126px;
+}
+
+.custom-shape-divider-bottom-1721451173 .shape-fill {
+  fill: #FFFFFF;
+}
+
+.cus-navbar{
+  background-color: #f1b807;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.booknow-btn{
+  position: fixed;
+  z-index: 1002;
+  rotate: 90deg;
+  left: 33px;
+  top: 50%;
+  transform-origin: top left;
+  background-color: #f1b807;
+  border: none;
+  /* height: 32px; */
+  /* width: 85px; */
+  border-top-right-radius: 10px;
+  border-top-left-radius: 10px;
+  /* font-size: 22px; */
+  padding: 6px 25px;
+  font-weight: 500;
+}
+
+body::-webkit-scrollbar {
+  width: 0.3em;
+}
+ 
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+body::-webkit-scrollbar-thumb {
+  background-color: #f1b607d6;
+  outline: 1px solid #ac850f;
+}
+
+.whatsapp-lottie{
+  width: 50px;
+  height: 50px;
+  overflow: hidden;
+  /* margin: 0px auto; */
+  outline: none;
+  position: fixed;
+  z-index: 2222;
+  bottom: 20px;
+  right: 20px;
+}
+
 
 @keyframes testiAnimatRight{
   from{transform: translateX(-500px);}
@@ -324,4 +434,39 @@ body {
   100%{
     opacity: 1;
   }
+}
+
+@media(width < 576px) {
+  .carousal-p{
+    margin-bottom: 0;
+    font-size: 10px;
+  }
+
+  .home-left-letter {
+    font-size: 23px;
+  }
+
+  .home-headings {
+    font-size: 30px;
+  }
+
+  .center-text-div {
+    width: 70%;
+  }
+
+  .center-text-div .desc {
+    font-size: 13px;
+    font-weight: 330;
+    margin-top: 20px !important;
+  }
+
+  .our_service .descp {
+    font-size: 13px;
+    font-weight: 330;
+  }
+
+  .header-icon {
+    height: 45px !important;
+  }
+
 }
