--- a/src/App.css
+++ b/src/App.css
@@ -246,10 +246,10 @@ body {
 }
 
 .testimonals-text-container{
-  background-color: #ffff;
+  /* background-color: transparent; */
   height: 394px;
-  width: 500px;
-  border-radius: 5%;
+  width: 500px !important;
+  /* border-radius: 5%; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -261,15 +261,45 @@ body {
 }
 
 .testimo-img{
-  height: 394px;
-  width: 394px;
+  /* height: 394px;
+  width: 394px; */
   border: 2px solid #ffff;
   border-radius: 5%;
   object-fit: cover;
 }
 
+.testimo-text{
+  color: #fff;
+}
+
+.carousel-inner .carousel-item .testimonals-text-container .test-div .testimo-text{
+  color: #fff;
+  font-size: 16px;
+  text-align: center;
+}
+
+.carousel-inner .carousel-item .testimonals-text-container .test-div .testimo-name{
+  color: #fff;
+  font-size: 17px;
+  font-weight: 500;
+  text-align: center;
+}
+
+.carousel-inner .carousel-item .testimonals-text-container .test-div .testimo-desc{
+  color: #fff;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+}
+
+
 .testimon-full-cont{
-  /* background: linear-gradient(180deg, #b6dafb00 0%, var(--secondary_navigation) 50%, #b6dafb00 100%); */
+  background: url("./assests/images/01-1-1@2x.png") no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
+  padding: 80px 0 50px;
+  width: 100%;
+  height: 600px;
 }
 
 .testi-animation-rightt{
@@ -313,6 +343,10 @@ body {
   padding: 20px;
   background-color: #fff; 
   overflow: hidden;
+  /* background: url("./assests/images/2023\ logo\ update.jpg") no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed; */
+  /* padding: 80px 0 50px; */
 }
 
 
@@ -322,12 +356,11 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  /* background-image: url('./assests/images/maindemoslide11.jpg'); */
-  background-position: center;
-  background-repeat: no-repeat;
+  /* background: url("./assests/images/2023\ logo\ update.jpg") no-repeat center center;
   background-size: cover;
+  background-attachment: fixed; */
   filter: blur(5px);
-  opacity: 0.6;
+  opacity: 0.5;
   z-index: 1;
 }
 
